--- a/WebContent/template.xhtml
+++ b/WebContent/template.xhtml
@@ -13,14 +13,14 @@
 
 <h:body>
 	<p:layout fullPage="true" style="min-width:400px;min-height:300px;">
-		<p:layoutUnit  position="north" size="60">
-			<ui:insert name="topo">
- 			</ui:insert>
-		</p:layoutUnit>
 
 		<p:layoutUnit position="center" size="200">
 			<ui:insert name="menu">
 				<ui:include src="/topo.xhtml" />
+			</ui:insert>
+			
+			<ui:insert name="messages">
+				<p:messages id="msg" showDetail="true" autoUpdate="true" closable="true" />
 			</ui:insert>
 			
 			<ui:insert name="centro">
