--- a/WebContent/topo.xhtml
+++ b/WebContent/topo.xhtml
@@ -3,11 +3,13 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
-	    	<p:submenu label="Cadastrar" icon="fa fa-plus">
-	    		<p:menuitem value="Concluinte"  url="#"/>
-	    		<p:menuitem value="Usuário"  url="#"/>
-	    		<p:menuitem value="Tipo de TCC"  url="#"/>
-	    	</p:submenu>
-	    	
-	    	<p:menuitem value="Sair" url="#" style="margin-right:15px" icon="fa fa-times-circle"/>
+	
+	<p:submenu label="Cadastrar" icon="fa fa-plus">
+		<p:menuitem value="Concluinte" url="#" />
+		<p:menuitem value="Usuário" url="#{autenticar.cadastro()}" />
+		<p:menuitem value="Tipo de TCC" url="#" />
+	</p:submenu>
+
+	<p:menuitem value="Sair" url="#" style="margin-right:15px"
+		icon="fa fa-times-circle" />
 </p:menubar>
