--- a/WebContent/template.xhtml
+++ b/WebContent/template.xhtml
@@ -19,6 +19,7 @@
 	<p:layout fullPage="true" style="min-width:400px;min-height:300px;">
 
 		<p:layoutUnit position="center" size="200">
+			
 			<ui:insert name="menu">
 				<ui:include src="/topo.xhtml" />
 			</ui:insert>
@@ -30,6 +31,11 @@
 			<ui:insert name="centro">
 					
 			</ui:insert>
+			
+			<ui:insert name="footer">
+					
+			</ui:insert>
+			
 		</p:layoutUnit>
 
 	</p:layout>
