--- a/WebContent/topo.xhtml
+++ b/WebContent/topo.xhtml
@@ -1,4 +1,3 @@
-
 <h:form xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
@@ -6,9 +5,10 @@
 	xmlns:p="http://primefaces.org/ui">
 	<p:menubar>
 		<p:submenu label="Cadastrar" icon="fa fa-plus">
-			<p:menuitem value="Concluinte" url="#" />
-			<p:menuitem value="Usuário" url="#" />
-			<p:menuitem value="Tipo de TCC" action="cadastro_tipotcc" />
+			<p:menuitem value="Concluinte" action="cadastro_concluinte?faces-redirect=true" />
+			<p:menuitem value="Usuário" action="cadastro?faces-redirect=true" />
+			<p:menuitem value="Professor" action="cadastro_professor?faces-redirect=true" />
+			<p:menuitem value="Tipo de TCC" action="cadastro_tipotcc?faces-redirect=true" />
 		</p:submenu>
 
 		<p:menuitem value="Sair" action="#{sessao.logout}" style="margin-right:15px" icon="fa fa-times-circle" />
