--- a/WebContent/cadastro.xhtml
+++ b/WebContent/cadastro.xhtml
@@ -8,23 +8,16 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="template.xhtml">
-	<ui:define name="menu">
-		<h1 style="text-align:center;">Controle de Concluintes</h1>
-	</ui:define>
 	
-	<ui:define name="verificacaoLogin">
-		
-	</ui:define>
-
 	<ui:define name="centro">
-
-		<h:form style="text-align:center;">
+		<h1 style="text-align:center;">Cadastro Professor de Estágio</h1>
+		<h:form style="text-align:center; margin-top: 5%;">
+			<p:inputText placeholder="Nome" id="nome" required="true" requiredMessage="Preencha o nome" value="#{sessao.nome}" /><br/>
 			<p:inputText placeholder="Login" id="login" required="true" requiredMessage="Preencha o login" value="#{sessao.login}" /><br/>
 			<p:password placeholder="Senha"  required="true" requiredMessage="Digite a senha" value="#{sessao.senha}"/><br/>
-			<p:commandButton style="margin-top:20px;" value="Entrar" action="#{sessao.efetuarLogin}" />
-
+			<p:commandButton style="margin-top: 20px;" value="Cadastrar" action="#{sessao.efetuarCadastro}" />
 		</h:form>
 	</ui:define>
+	
 </ui:composition>
-
 </html>
