--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -9,19 +9,20 @@
 
 <ui:composition template="template.xhtml">
 	<ui:define name="menu">
-		<h1 style="text-align:center;">Controle de Concluintes</h1>
-	</ui:define>
-	
-	<ui:define name="verificacaoLogin">
-		
+		<h1 style="text-align: center;">Controle de Concluintes</h1>
 	</ui:define>
 
 	<ui:define name="centro">
 
 		<h:form style="text-align:center;">
-			<p:inputText placeholder="Login" id="login" required="true" requiredMessage="Preencha o login" value="#{sessao.login}" /><br/>
-			<p:password placeholder="Senha"  required="true" requiredMessage="Digite a senha" value="#{sessao.senha}"/><br/>
-			<p:commandButton style="margin-top:20px;" value="Entrar" action="#{sessao.efetuarLogin}" />
+			<p:inputText placeholder="Login" id="login" required="true"
+				requiredMessage="Preencha o login" value="#{sessao.login}" />
+			<br />
+			<p:password placeholder="Senha" required="true"
+				requiredMessage="Digite a senha" value="#{sessao.senha}" />
+			<br />
+			<p:commandButton style="margin-top:20px;" value="Entrar"
+				action="#{sessao.efetuarLogin}" />
 
 		</h:form>
 	</ui:define>
