--- a/WebContent/topo.xhtml
+++ b/WebContent/topo.xhtml
@@ -21,7 +21,7 @@
 		</c:if>
 		<c:if test="#{sessao.usuarioLogado.tipo == 1}">
 			<p:submenu label="Cadastrar" icon="fa fa-plus">
-				<p:menuitem value="Concluinte" url="#" />
+				<p:menuitem value="Concluinte" action="cadastro_concluinte?faces-redirect=true" />
 			</p:submenu>
 		</c:if>
 		        
