--- a/WebContent/template.xhtml
+++ b/WebContent/template.xhtml
@@ -21,7 +21,7 @@
 			</ui:insert>
 			
 			<ui:insert name="messages">
-				<p:messages id="msg" showDetail="true" autoUpdate="true" closable="true" />
+				<p:messages id="msg" autoUpdate="true" closable="true" />
 			</ui:insert>
 			
 			<ui:insert name="centro">
