--- a/WebContent/painel.xhtml
+++ b/WebContent/painel.xhtml
@@ -10,7 +10,11 @@
 <ui:composition template="/template.xhtml">
 
 	<ui:define name="centro">
-		
+		<h:form>
+			<p:dataTable>
+				
+			</p:dataTable>
+		</h:form>
 	</ui:define>
 
 </ui:composition>
