Cadastrando a primeira etapa do processo e ajustei um monte de coisa

--- a/WebContent/cadastro_concluinte.xhtml
+++ b/WebContent/cadastro_concluinte.xhtml
@@ -10,7 +10,7 @@
 <ui:composition template="/template.xhtml">
 	<ui:define name="centro">
 		<br />
-		<h:form style="text-align: center;">
+		<h:form>
 			<h1>Cadastro de Concluinte</h1>
 			<p:fieldset legend="Dados do Concluinte" toggleable="true">
 				<p:inputText placeholder="Matrícula"
@@ -68,7 +68,7 @@
 				<br />
 
 				<p:outputLabel for="banca" value="Banca:" />
-				<p:pickList style="margin: auto;" required="true" requiredMessage="Preencha a banca"
+				<p:pickList  required="true" requiredMessage="Preencha a banca"
 					id="banca" value="#{concluinteBean.professores}" var="professores"
 					itemLabel="#{professores.nome}" itemValue="#{professores}"
 					converter="generic">
