--- a/WebContent/topo.xhtml
+++ b/WebContent/topo.xhtml
@@ -12,15 +12,15 @@
         </f:facet>
       
 		<c:if test="#{sessao.usuarioLogado.tipo == 0}">
-			<p:submenu label="Cadastrar" icon="fa fa-plus">
+			<p:menuitem value="Painel" action="painel?faces-redirect=true" icon="fa fa-home" style="margin-right: 15px;"/>
+			<p:submenu label="Cadastrar" icon="fa fa-plus" style="margin-right: 15px;">
 				<p:menuitem value="Concluinte" action="cadastro_concluinte?faces-redirect=true" />
-				<p:menuitem value="Usuário" action="cadastro?faces-redirect=true" />
-				<p:menuitem value="Professor" action="cadastro_professor?faces-redirect=true" />
+				<p:menuitem value="Prof. Estágio" action="cadastro?faces-redirect=true" />
+				<p:menuitem value="Prof. (Banca, Orientador)" action="cadastro_professor?faces-redirect=true" />
 				<p:menuitem value="Tipo de TCC" action="cadastro_tipotcc?faces-redirect=true" />
 			</p:submenu>
-			<p:menuitem value="Painel" action="painel?faces-redirect=true" icon="fa fa-home" />
-			<p:menuitem value="Concluintes" action="concluintes?faces-redirect=true" icon="fa fa-user"/>
-			<p:menuitem value="Processos" icon="fa fa-file" />
+			<p:menuitem value="Concluintes" action="concluintes?faces-redirect=true" style="margin-right: 15px;" icon="fa fa-user"/>
+			<p:menuitem value="Processos" icon="fa fa-file" style="margin-right: 15px;"/>
 		</c:if>
 		<c:if test="#{sessao.usuarioLogado.tipo == 1}">
 			<p:submenu label="Cadastrar" icon="fa fa-plus">
