--- a/WebContent/cadastro_concluinte.xhtml
+++ b/WebContent/cadastro_concluinte.xhtml
@@ -8,7 +8,7 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:c="http://java.sun.com/jsp/jstl/core">
 
-<ui:compositio template="/template.xhtml">
+<ui:composition template="/template.xhtml">
 	<ui:define name="centro">
 		<br />
 		<h:form style="text-align: center;">
