--- a/WebContent/cadastro_concluinte.xhtml
+++ b/WebContent/cadastro_concluinte.xhtml
@@ -14,17 +14,17 @@
 		<h:form style="text-align: center;">
 			<h1>Cadastro de Concluinte</h1>
 			<p:fieldset legend="Dados do Concluinte" toggleable="true">
-				<p:inputText placeholder="Matrícula"
+				<p:inputText style="margin-top:20px;" placeholder="Matrícula"
 					value="#{concluinteBean.matricula}" required="true"
 					requiredMessage="Insira a Matrícula" />
 				<br />
-				<p:inputText placeholder="Nome" value="#{concluinteBean.nome}"
+				<p:inputText style="margin-top:20px;" placeholder="Nome" value="#{concluinteBean.nome}"
 					required="true" requiredMessage="Insira o Nome do Concluinte" />
 				<br />
-				<p:inputText placeholder="Email" value="#{concluinteBean.email}"
+				<p:inputText style="margin-top:20px;" placeholder="Email" value="#{concluinteBean.email}"
 					required="true" requiredMessage="Insira o Email do Concluinte" />
 				<br />
-				<p:inputText placeholder="Telefone"
+				<p:inputText style="margin-top:20px;" placeholder="Telefone"
 					value="#{concluinteBean.telefone}" required="true"
 					requiredMessage="Insira o Telefone do Concluinte" />
 				<br />
