--- a/WebContent/painel.xhtml
+++ b/WebContent/painel.xhtml
@@ -10,7 +10,9 @@
 <ui:composition template="/template.xhtml">
 
 	<ui:define name="centro">
-	
+		<div align="center" style="margin-top: 50px;">
+			<img style="height: 400px; width: 600px;" align="center" src="img/ifpb-tsi.png"></img>
+		</div>
 	</ui:define>
 
 </ui:composition>
