--- a/WebContent/cadastro_processo.xhtml
+++ b/WebContent/cadastro_processo.xhtml
@@ -10,11 +10,11 @@
 
 <ui:composition template="/template.xhtml">
 	<ui:define name="centro">
-		<h:form>
+		<h:form style="text-align:center;">
 			<br />
 			#{processoBean.carregarFlash()}
-			<p:fieldset legend="Dados do Concluinte" toggleable="true">
-				<p:panelGrid columns="2">
+			<p:fieldset legend="Dados do Concluinte" toggleable="true" style="margin-left:23%; width:700px;">
+				<p:panelGrid style="margin: 0 auto;" columns="2">
 					<p:outputLabel for="matricula" value="Matrícula:" />
 					<h:outputText id="matricula"
 						value="#{processoBean.concluinte.matricula}" />
@@ -28,8 +28,8 @@
 				</p:panelGrid>
 			</p:fieldset>
 			<br />
-			<p:fieldset legend="Pendências" toggleable="true">
-				<p:panelGrid columns="2">
+			<p:fieldset legend="Pendências" toggleable="true" style="margin-left:23%; width:700px;">
+				<p:panelGrid style="margin: 0 auto;" columns="2">
 					<p:outputLabel for="processoEstagio" value="Processo de Estágio: " />
 					<p:selectBooleanCheckbox id="processoEstagio" disabled="true"
 						value="#{processoBean.processo.status.getValue() >= 5? true:false}" />
@@ -49,8 +49,8 @@
 				</p:panelGrid>
 			</p:fieldset>
 			<br />
-			<p:fieldset legend="Processo de Estágio" toggleable="true">
-				<p:panelGrid columns="2">
+			<p:fieldset legend="Processo de Estágio" toggleable="true" style="margin-left:23%; width:700px;">
+				<p:panelGrid style="margin: 0 auto;" columns="2">
 					<p:outputLabel for="numero" value="Número do Processo: " />
 					<p:inputText
 						disabled="#{processoBean.processo.status.getValue() >= 1}"
