--- a/WebContent/painel.xhtml
+++ b/WebContent/painel.xhtml
@@ -10,6 +10,7 @@
 <ui:composition template="/template.xhtml">
 
 	<ui:define name="centro">
+		<h1 style="text-align: center;">Controle de Concluintes</h1>
 
 		<!-- 
 			<div align="center" style="margin-top: 50px;">
