--- a/WebContent/painel.xhtml
+++ b/WebContent/painel.xhtml
@@ -5,10 +5,12 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:c="http://java.sun.com/jsp/jstl/core">
 
 <ui:composition template="/template.xhtml">
-
+	
+	<c:if test="#{sessao.usuarioLogado.tipo == 0}">
 	<ui:define name="centro">
 		<h1 style="text-align: center;">Controle de Concluintes</h1>
 
@@ -66,6 +68,6 @@
 		</p:panel>
 
 	</ui:define>
-
+</c:if>
 </ui:composition>
 </html>
